--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
    
       <div class="col-2" > 
         <h3>follow social media</h3>
-          <a href="https://instagram.com/himanshu10974"> <i class="fa-brands fa-square-instagram fa-2x"></i></a>
+          <a href="https://instagram.com/himanshu_.official"> <i class="fa-brands fa-square-instagram fa-2x"></i></a>
           <!-- <a href=""> <i class="fa-brands fa-twitter fa-2x"></i></a> -->
           <!-- <a href=""><i class="fa-brands fa-telegram fa-2x"></i></a> -->
           <a href="https://www.linkedin.com/in/r-aj-87aa44230/"> <i class="fa-brands fa-linkedin fa-2x"></i></a>
