--- a/8051-microprocessor.html
+++ b/8051-microprocessor.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+
     <title>The 8051 Microcontroller
         and Embedded Systems</title>
 
@@ -35,6 +37,10 @@
         </style>
 </head>
 <body>
+    <a href="./index.html">
+        <i class="fa-solid fa-house fa-2x" class="home" title="home" style="margin-left: 2%;"></i>
+      </a>
+      <hr>
      <div class="mcmp">
         <!-- right-side -->
         <div >
