--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="HTML, CSS, JavaScript , books , library , how to fluent english ">
-    <title>Library</title>
+    <title>  CU Library </title>
+    <link rel="icon" type="image/x-icon" href="./asstes/logo-cu library.png">
     <!-- link external sheet -->
     <link rel="stylesheet" href="./style/style1.css">
     <!-- google fonts -->
