--- a/ANIMI/animi.html
+++ b/ANIMI/animi.html
@@ -7,7 +7,7 @@
     <title>Animi story</title>
     <style>
    .animi{
-    background-image: url(./asstes/animi-1.jpg);
+    background-image: url();                              
     background-size: cover;
     display: block;
     background-repeat: no-repeat;
