--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   
   .financial-heading h3{
     font-size: 79px;
-    margin-top: -169px;
+    margin-top: -39px;
     margin-left: -639px;
     text-indent: 1000px;
     word-spacing: 20px;
@@ -126,8 +126,45 @@
      display: none;
      
   }
-  
 
+  .heading-Recommended {
+    padding: 403px;
+    padding-top: 34px;
+    align-items: center;
+  }
+  
+   
+  .Recommended
+ img{
+    height: 37vh;
+    width: 78%;
+    margin-top: -79%;
+    margin-left: 172%;
+  }
+
+
+  .Recommended
+ button{
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 300px;
+    font-size: 18px;
+  }
+
+  .Recommended
+ button :hover{
+    opacity: 0.7;
+  }
+
+  .button-heading{
+        margin-top: 80px;
+        margin-left: 1300px;
+ }
   
 
   .action-1 img {
@@ -843,8 +880,8 @@
     <!-- </div> 
   </div>  -->
      <!-- ADDs -->
-     <div>
-      <h1  style="margin-top: 380px; margin-left: 200px; font-size: 50px;"> Recommended book</h1>  
+     <div >
+      <h1  style="margin-top: 380px; margin-left: 200px; font-size: 50px;" class="heading-Recommended"> Recommended book</h1>  
     <div  class="Recommended ">
     <img src="./asstes/VIVEK KUMAR.jpg" >
     <div class="button-heading">
