--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
     <div  class="Recommended ">
     <img src="./asstes/VIVEK KUMAR.jpg" >
     <div class="button-heading">
-      <h1>Digital Marketing </h1>
+      <h1>Digital Marketing books </h1>
       <button> <a href="https://www.amazon.in/dp/B0C9X89Y2M/ref=sr_1_2?keywords=decoded+digital+marketing&qid=1688216585&s=digital-text&sr=1-2&fbclid=PAAaYYU4sTcavFZbyxwWoJHaoj5T6kHzX-RjxBp2S-bSL4jfi5hNSa3VjHiGE"> Buy Now</a> </button>
     </div>
     </div>
